doc: add swagger
